kubernetes/manifests/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: heimdall
  name: heimdall
  namespace: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: heimdall
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: heimdall
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
          image: lscr.io/linuxserver/heimdall:2.4.15
          name: heimdall
          ports:
            # - containerPort: 80
            - containerPort: 443
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: heimdall-claim
      restartPolicy: Always
      volumes:
        - name: heimdall-claim
          persistentVolumeClaim:
            claimName: heimdall-claim
status: {}
