kubernetes/manifests/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: heimdall
  name: heimdall
  namespace: heimdall
spec:
  ports:
    # - name: "http"
    #   port: 718
    #   targetPort: 80
    - name: "https"
      port: 719
      targetPort: 443
  selector:
    io.kompose.service: heimdall
status:
  loadBalancer: {}
