kubernetes/manifests/heimdall/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: heimdall
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.local.example.com`) # create A record in pihole
      kind: Rule
      services:
        - name: heimdall
          port: 719
  tls:
    secretName: local-example-com-tls # or local-example-com-staging-tls
